cmake_minimum_required(VERSION 3.23)
project(DSAB2407CPP)

set(CMAKE_CXX_STANDARD 23)

add_executable(DSAB2407CPP Basics/main.cpp)
add_executable(DSAB2407CPP_0 Basics/DynamicMemoryAllocation.cpp)
add_executable(DSAB2407CPP_1 OOPs/OOPsWithoutConstructor.cpp)
add_executable(DSAB2407CPP_2 OOPs/OOPsWithConstructor.cpp)
add_executable(DSAB2407CPP_3 OOPs/NameClash.cpp)
add_executable(DSAB2407CPP_4 OOPs/Encapsulation.cpp)
add_executable(DSAB2407CPP_5 OOPs/Inheritance.cpp)
add_executable(DSAB2407CPP_6 OOPs/Overloading.cpp)
add_executable(DSAB2407CPP_7 OOPs/Overriding.cpp)
add_executable(DSAB2407CPP_8 OOPs/AbstractClasses.cpp)
add_executable(DSAB2407CPP_9 OOPs/AssociationLooseCoupling.cpp)
add_executable(DSAB2407CPP_10 OOPs/ExceptionHandling.cpp)
add_executable(DSAB2407CPP_11 Problems/ReverseAnArray.cpp)
add_executable(DSAB2407CPP_12 Problems/RotateArrayLeftOrRight.cpp)
add_executable(DSAB2407CPP_13 Basics/DMAUnequalMatrix.cpp)
add_executable(DSAB2407CPP_14 HelperFunctions.cpp)
add_executable(DSAB2407CPP_15 DataStructures/StacksAndQueues/StackImplementationUsingArray.cpp)
add_executable(DSAB2407CPP_16 DataStructures/StacksAndQueues/QueueImplementation.cpp)
add_executable(DSAB2407CPP_17 OOPs/PaddingAndGreedyAlignment.cpp)
add_executable(DSAB2407CPP_18 Algorithms/Searching/LinearSearch.cpp)
add_executable(DSAB2407CPP_19 Algorithms/Searching/BinarySearch.cpp)
add_executable(DSAB2407CPP_20 Algorithms/Searching/RecursiveBinarySearch.cpp)
add_executable(DSAB2407CPP_21 Problems/BinarySearchApplications/FirstLastOccurrenceBinarySearch.cpp)
add_executable(DSAB2407CPP_22 Problems/BinarySearchApplications/SquareRootUsingBinarySearch.cpp)
add_executable(DSAB2407CPP_23 Problems/BinarySearchApplications/SmallestLargestFromATargetElement.cpp)
add_executable(DSAB2407CPP_24 Algorithms/Sorting/BubbleSort.cpp)
add_executable(DSAB2407CPP_25 Algorithms/Sorting/BubbleSortOptimization.cpp)
add_executable(DSAB2407CPP_26 Algorithms/Sorting/SelectionSort.cpp)
add_executable(DSAB2407CPP_27 Algorithms/Sorting/InsertionSort.cpp)
add_executable(DSAB2407CPP_28 Problems/PrintOneToNWithoutLoop.cpp)
add_executable(DSAB2407CPP_29 Problems/MergeTwoSortedArrays.cpp)
add_executable(DSAB2407CPP_30 Algorithms/Sorting/MergeSort.cpp)
add_executable(DSAB2407CPP_31 Algorithms/Sorting/CountSort.cpp)
add_executable(DSAB2407CPP_32 Algorithms/Sorting/RadixSort.cpp)
add_executable(DSAB2407CPP_33 DataStructures/LinkedLists/SinglyLinkedList.cpp)
add_executable(DSAB2407CPP_34 DataStructures/LinkedLists/DoublyLinkedList.cpp)
add_executable(DSAB2407CPP_35 DataStructures/LinkedLists/CircularLinkedList.cpp)
add_executable(DSAB2407CPP_36 DataStructures/Trees/BinaryTrees/BinaryTreeDFSTraversals.cpp)
add_executable(DSAB2407CPP_37 DataStructures/Trees/BinaryTrees/BinaryTreeBFSLevelOrderTraversal.cpp)
add_executable(DSAB2407CPP_38 Problems/MirrorOfABinaryTree.cpp)
add_executable(DSAB2407CPP_39 Problems/IdenticalTrees.cpp)
add_executable(DSAB2407CPP_40 DataStructures/Trees/BinarySearchTrees/BSTImplementation.cpp)
add_executable(DSAB2407CPP_41 Algorithms/Sorting/QuickSort.cpp)
add_executable(DSAB2407CPP_42 Algorithms/Sorting/WaveSort.cpp)
add_executable(DSAB2407CPP_43 DataStructures/Tries/TrieImplementation.cpp)
add_executable(DSAB2407CPP_44 StandardTemplateLibrary/STLStack.cpp)
add_executable(DSAB2407CPP_45 StandardTemplateLibrary/STLQueue.cpp)
add_executable(DSAB2407CPP_46 Problems/ReverseQueue.cpp)
add_executable(DSAB2407CPP_47 StandardTemplateLibrary/STLForwardList.cpp)
add_executable(DSAB2407CPP_48 StandardTemplateLibrary/STLList.cpp)
add_executable(DSAB2407CPP_49 StandardTemplateLibrary/STLMap.cpp)
add_executable(DSAB2407CPP_50 StandardTemplateLibrary/STLUnorderedMap.cpp)
add_executable(DSAB2407CPP_51 StandardTemplateLibrary/MapWithListOfStrings.cpp)
add_executable(DSAB2407CPP_52 StandardTemplateLibrary/STLSets.cpp)
add_executable(DSAB2407CPP_53 StandardTemplateLibrary/STLUnorderedSet.cpp)
add_executable(DSAB2407CPP_54 StandardTemplateLibrary/STLVectors.cpp)
add_executable(DSAB2407CPP_55 StandardTemplateLibrary/PushBackAndEmplaceBackInVectors.cpp)
add_executable(DSAB2407CPP_56 DataStructures/Heaps/HeapImplementationUsingArray.cpp)
add_executable(DSAB2407CPP_57 Problems/MaxUsingTemplates.cpp)
add_executable(DSAB2407CPP_58 Problems/SortAnArrayUsingCountSort.cpp)
add_executable(DSAB2407CPP_59 LGSoft/GraphAdjMatrix.cpp)
add_executable(DSAB2407CPP_60 LGSoft/GraphAdjList.cpp)
add_executable(DSAB2407CPP_61 DataStructures/PriorityQueue/PriorityQueueSTL.cpp)
add_executable(DSAB2407CPP_62 DataStructures/PriorityQueue/PriorityQueueCustomComparator.cpp)
add_executable(DSAB2407CPP_63 DataStructures/PriorityQueue/PriorityQueueMinHeapUsingBinaryHeap.cpp)
add_executable(DSAB2407CPP_64 DataStructures/PriorityQueue/PriorityQueueArrayImplementation.cpp)
add_executable(DSAB2407CPP_65 DataStructures/PriorityQueue/PriorityQueueUsingLinkedList.cpp)
add_executable(DSAB2407CPP_66 Problems/BinarySearchApplications/MissingElement.cpp)
add_executable(DSAB2407CPP_67 DataStructures/Graphs/GraphRepresentation/GraphUsingAdjacencyMatrix.cpp)
add_executable(DSAB2407CPP_68 DataStructures/Graphs/GraphRepresentation/GraphUsingAdjacencyListUndirected.cpp)
add_executable(DSAB2407CPP_69 DataStructures/Graphs/GraphRepresentation/GraphUsingAdjacencyListDirected.cpp)
add_executable(DSAB2407CPP_70 DataStructures/Graphs/GraphRepresentation/GraphUsingAdjListDirectedWeighted.cpp)
add_executable(DSAB2407CPP_71 DataStructures/Graphs/Traversal/GraphBFSTraversal.cpp)
add_executable(DSAB2407CPP_72 DataStructures/Graphs/Traversal/GraphDFSTraversal.cpp)
add_executable(DSAB2407CPP_73 DataStructures/Graphs/CycleDetection/DetectCycleBFSUndirected.cpp)
add_executable(DSAB2407CPP_74 DataStructures/Graphs/CycleDetection/CycleDetectionDFSUndirected.cpp)
add_executable(DSAB2407CPP_75 DataStructures/Graphs/Questions/AdjMatToAdjList.cpp)
add_executable(DSAB2407CPP_76 DataStructures/Graphs/Traversal/PrePostDFS/PreDFSVector.cpp)
add_executable(DSAB2407CPP_77 DataStructures/Graphs/Traversal/PrePostDFS/PreDFSUnorderedSet.cpp)
add_executable(DSAB2407CPP_78 DataStructures/Graphs/Traversal/PrePostDFS/PostDFSVector.cpp)
add_executable(DSAB2407CPP_79 DataStructures/Graphs/Traversal/PrePostDFS/PostDFSUnorderedSet.cpp)
add_executable(DSAB2407CPP_80 DataStructures/Graphs/CycleDetection/CycleDetectionDFSDirected.cpp)
add_executable(DSAB2407CPP_81 DataStructures/Graphs/GraphAlgos/TopologicalSort.cpp)
add_executable(DSAB2407CPP_82 DataStructures/Graphs/GraphAlgos/TopologicalSortKahn'sAlgoBFS.cpp)
add_executable(DSAB2407CPP_83 DataStructures/Graphs/GraphAlgos/TopoSortKahn'sAlgoDirectedGraphCycleDetection.cpp)
add_executable(DSAB2407CPP_84 DataStructures/Graphs/Questions/CountEdgesAndNodes.cpp)
add_executable(DSAB2407CPP_85 DataStructures/Graphs/GraphAlgos/Dijkstra'sAlgoPriorityQueue.cpp)
add_executable(DSAB2407CPP_86 DataStructures/Graphs/GraphAlgos/Dijkstra'sAlgoSet.cpp)
add_executable(DSAB2407CPP_87 DataStructures/Graphs/GraphAlgos/BellmanFordAlgorithm.cpp)
add_executable(DSAB2407CPP_88 DataStructures/Graphs/GraphAlgos/FloydWarshallAlgorithm.cpp)
add_executable(DSAB2407CPP_89 DataStructures/Graphs/GraphAlgos/Prim'sAlgorithm.cpp)
add_executable(DSAB2407CPP_90 DataStructures/Graphs/GraphAlgos/Prim'sAlgoToPrintMSTEdges.cpp)
add_executable(DSAB2407CPP_91 DataStructures/Graphs/DisjointSetDataStructure/DisjointSetUnionByRank.cpp)
add_executable(DSAB2407CPP_92 DataStructures/Graphs/DisjointSetDataStructure/DisjointSetUnionBySize.cpp)
add_executable(DSAB2407CPP_93 DataStructures/Graphs/DisjointSetDataStructure/Kruskal'sAlgorithm.cpp)
add_executable(DSAB2407CPP_94 Algorithms/BackTracking/RatInAMaze.cpp)
add_executable(DSAB2407CPP_95 Algorithms/BackTracking/SudokuSolver.cpp)
add_executable(DSAB2407CPP_96 Algorithms/BackTracking/NQueens.cpp)
add_executable(DSAB2407CPP_97 Algorithms/BackTracking/SubsetsOfArray.cpp)
add_executable(DSAB2407CPP_98 Algorithms/BackTracking/SubsequencesOfAString.cpp)
add_executable(DSAB2407CPP_99 Algorithms/BackTracking/PhoneKeypadProblem.cpp)
add_executable(DSAB2407CPP_100 Problems/LargestNumberLeetCode.cpp)
add_executable(DSAB2407CPP_101 DynamicProgramming/Recursion/Factorial.cpp)
add_executable(DSAB2407CPP_102 DynamicProgramming/Recursion/FibonacciSeries.cpp)
add_executable(DSAB2407CPP_103 DynamicProgramming/Recursion/PrintArrayInReverse.cpp)
add_executable(DSAB2407CPP_104 DynamicProgramming/Recursion/ReverseAString.cpp)
add_executable(DSAB2407CPP_105 DynamicProgramming/Recursion/SumOfDigits.cpp)
add_executable(DSAB2407CPP_106 DynamicProgramming/Fibonacci/FibonacciRec.cpp)
add_executable(DSAB2407CPP_107 DynamicProgramming/Fibonacci/FibonacciMemo.cpp)
add_executable(DSAB2407CPP_108 DynamicProgramming/Fibonacci/FibonacciTab.cpp)
add_executable(DSAB2407CPP_109 DynamicProgramming/Fibonacci/FibonacciSpaceOptimized.cpp)